--- a/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
+++ b/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 06:41:55 GMT
+    - Sun, 22 Oct 2017 08:20:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=22rdriislkitp9qei4etae8th4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 06:41:55 GMT
+recorded_at: Sun, 22 Oct 2017 08:20:45 GMT
