--- a/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
+++ b/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:39:47 GMT
+    - Sun, 22 Oct 2017 08:29:34 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=as1gav99ama0h5jclqbha6k1o5; path=/
+    - PHPSESSID=u28f1o1norumgnmf0dc83n5315; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:39:48 GMT
+recorded_at: Sun, 22 Oct 2017 08:29:35 GMT
