--- a/house.gov.by/735daa1cb81e3ac118309362e8312e61674a46b1.yml
+++ b/house.gov.by/735daa1cb81e3ac118309362e8312e61674a46b1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 06:42:48 GMT
+    - Sun, 22 Oct 2017 08:32:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ahq750li8gvfctkjbo1ajt39q5; path=/
+    - PHPSESSID=om7kcp6rmb9gm53vk9vpih5eo6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 06:42:48 GMT
+recorded_at: Sun, 22 Oct 2017 08:32:29 GMT
