--- a/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
+++ b/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:50:16 GMT
+    - Sun, 22 Oct 2017 09:00:14 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=1do8jcanii6f5t977ivlp8m6r3; path=/
+    - PHPSESSID=r7rv3hjjj1qed22nsqv4c7uc55; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:50:17 GMT
+recorded_at: Sun, 22 Oct 2017 09:00:15 GMT
