--- a/house.gov.by/392a9477f991af309f5fc9db54c5cc62a61556ac.yml
+++ b/house.gov.by/392a9477f991af309f5fc9db54c5cc62a61556ac.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 06:42:19 GMT
+    - Sun, 22 Oct 2017 09:18:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=1gj5bgf2stoprrues6ut29b3d1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 06:42:20 GMT
+recorded_at: Sun, 22 Oct 2017 09:18:18 GMT
