--- a/house.gov.by/71488deaf54b16030ec2269c0421201f65e259e6.yml
+++ b/house.gov.by/71488deaf54b16030ec2269c0421201f65e259e6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:19:55 GMT
+    - Sun, 22 Oct 2017 09:31:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=sai3u7cd4ncb438lt5e0ld5nb6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:19:55 GMT
+recorded_at: Sun, 22 Oct 2017 09:31:44 GMT
