--- a/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
+++ b/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:10:00 GMT
+    - Sun, 22 Oct 2017 09:50:11 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=r5tp6g5ou82r6o7fsbr4a16dp0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:10:01 GMT
+recorded_at: Sun, 22 Oct 2017 09:50:11 GMT
