--- a/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
+++ b/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:13:48 GMT
+    - Sun, 22 Oct 2017 09:51:35 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=a536ctf1h9dsp7bsa20eisge91; path=/
+    - PHPSESSID=l6f5vkj2ttkfpu5d9hjbse0gt4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:13:48 GMT
+recorded_at: Sun, 22 Oct 2017 09:51:35 GMT
