--- a/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
+++ b/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:19:17 GMT
+    - Sun, 22 Oct 2017 09:54:22 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=7k9e0917sth8achnc08tfk7nr4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:19:17 GMT
+recorded_at: Sun, 22 Oct 2017 09:54:23 GMT
