--- a/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
+++ b/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:01:02 GMT
+    - Sun, 22 Oct 2017 09:57:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7415i8narecoui538cg5rarnd3; path=/
+    - PHPSESSID=547l91cs41ae9misv40jtvv6b2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:01:02 GMT
+recorded_at: Sun, 22 Oct 2017 09:57:34 GMT
