--- a/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
+++ b/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:59:37 GMT
+    - Sun, 22 Oct 2017 09:59:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=8t97nd9lusuk8qlus7tbq6a4a7; path=/
+    - PHPSESSID=qiie60t30k9t6ljel9e1c4caa1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:59:38 GMT
+recorded_at: Sun, 22 Oct 2017 10:00:00 GMT
