--- a/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
+++ b/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:10:25 GMT
+    - Sun, 22 Oct 2017 10:07:12 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=jno2caqlkdhbussmrk72ku8oo0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:10:26 GMT
+recorded_at: Sun, 22 Oct 2017 10:07:12 GMT
