--- a/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
+++ b/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:15:46 GMT
+    - Sun, 22 Oct 2017 10:07:43 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=d8id9ice948lk3b0ss4133ksa2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:15:47 GMT
+recorded_at: Sun, 22 Oct 2017 10:07:43 GMT
