--- a/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
+++ b/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:13:08 GMT
+    - Sun, 22 Oct 2017 10:15:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ta0mamomth14ljgbm3ll27jdu3; path=/
+    - PHPSESSID=2asacfnsdphk6og24n4ddkiqm7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:13:09 GMT
+recorded_at: Sun, 22 Oct 2017 10:15:25 GMT
