--- a/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
+++ b/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 08:36:48 GMT
+    - Sun, 22 Oct 2017 10:20:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jee8pu5qtf2nttdu3t07tj2j36; path=/
+    - PHPSESSID=l2duru2m0tlh7lmmmheh87o3u2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 08:36:49 GMT
+recorded_at: Sun, 22 Oct 2017 10:20:57 GMT
