--- a/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
+++ b/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:51:09 GMT
+    - Sun, 22 Oct 2017 10:25:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ns8f3462qrt9suh9doabha83t7; path=/
+    - PHPSESSID=oi5bs7e1dsfrr8rircmii8cnh1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:51:10 GMT
+recorded_at: Sun, 22 Oct 2017 10:25:44 GMT
