--- a/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.yml
+++ b/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:30:02 GMT
+    - Sun, 22 Oct 2017 10:38:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=r9lq31q14k8lheamo6demposv0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:30:02 GMT
+recorded_at: Sun, 22 Oct 2017 10:38:43 GMT
