--- a/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
+++ b/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:48:47 GMT
+    - Sun, 22 Oct 2017 10:41:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=c1pd6li1nn933td84ppo7c8vq5; path=/
+    - PHPSESSID=q3up276s5duv24na64ttps3pt4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:48:48 GMT
+recorded_at: Sun, 22 Oct 2017 10:41:45 GMT
