--- a/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
+++ b/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 08:38:30 GMT
+    - Sun, 22 Oct 2017 10:47:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=cm7iscnrfaa933md3v59kv0d34; path=/
+    - PHPSESSID=s9t6t7hp8hkqkptq9hs048i0g4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 08:38:31 GMT
+recorded_at: Sun, 22 Oct 2017 10:47:47 GMT
