--- a/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
+++ b/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 08:55:02 GMT
+    - Sun, 22 Oct 2017 10:49:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=tr11cq4nh60amdard7kbcvh1l6; path=/
+    - PHPSESSID=k5kuetr2g8bs2al3qa92e69u16; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 08:55:03 GMT
+recorded_at: Sun, 22 Oct 2017 10:49:59 GMT
