--- a/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
+++ b/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:30:27 GMT
+    - Sun, 22 Oct 2017 10:55:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=m5v1ggq393ga47ds4oeernuec5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:30:27 GMT
+recorded_at: Sun, 22 Oct 2017 10:55:38 GMT
