--- a/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
+++ b/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:19:22 GMT
+    - Sun, 22 Oct 2017 11:24:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=pasq8fcf9gqbk1dbjr2m0go562; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:19:23 GMT
+recorded_at: Sun, 22 Oct 2017 11:24:27 GMT
